<resources>
    <string name="app_name">Amazing Wallpapers</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact us</string>
    <string name="share_app">Share kar</string>
    <string name="favorite">Favorite</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="version">Version: %1$s</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="sign_out">Sign out</string>
    <string name="disclaimer_text">All the Pictures available in this app come from Various sources of the Internet Including Public Domain.
No Copyright Infringement is Intended, and a request to remove any of the Picture is Always Welcome.</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="create">Create</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="start">Get Started</string>
    <string name="new_img">New</string>
    <string name="app_id">ca-app-pub-1306982071797241~2630782596</string>
    <string name="favorite_wallpaper">Favorite Wallpaper</string>
    <string name="rate_app">Rate App</string>
    <string name="no_connection">No connection</string>
    <string name="pro_wallpaper">Pro Wallpaper</string>
    <string name="loading_completed">Loading Completed</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="both">Both</string>

    <string name="DownloadFolder">/Download/Wallpaper/</string>
    <string name="error_server">Check your internet connection</string>

</resources>